--- a/package.json
+++ b/package.json
@@ -19,10 +19,18 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "devDependencies": {
+    "@pnotify/animate": "^5.2.0",
+    "@pnotify/mobile": "^5.2.0",
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "@pnotify/desktop": "^5.2.0",
+    "babel-cli": "^6.26.0",
+    "basiclightbox": "^5.0.4",
+    "infinite-scroll": "^4.0.1"
   }
 }
